--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,14 @@ body {
   margin: 0 auto;
 }
 
+.error {
+  color: red;
+}
+
+.hidden {
+  display: none;
+}
+
 button, input[type="text"] {
   padding: 5px;
 }
